--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,10 +70,11 @@ dependencies {
     // 🔥 Google Ads
     implementation 'com.google.android.gms:play-services-ads:24.2.0'
 
-    dependencies {
-        implementation 'com.github.bumptech.glide:glide:4.16.0'
-        annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
-    }
+    // 🔥 Image Cropper
+    implementation libs.ucrop
+
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
 
 
 }
